tests/baselines/reference/es2021IntlAPIs.errors.txt
es2021IntlAPIs.ts(4,1): error TS2348: Value of type 'DisplayNamesConstructor' is not callable. Did you mean to include 'new'?
es2021IntlAPIs.ts(5,1): error TS2554: Expected 2 arguments, but got 0.
es2021IntlAPIs.ts(6,1): error TS2554: Expected 2 arguments, but got 1.
es2021IntlAPIs.ts(7,29): error TS2345: Argument of type '{}' is not assignable to parameter of type 'DisplayNamesOptions'.
  Property 'type' is missing in type '{}' but required in type 'DisplayNamesOptions'.
es2021IntlAPIs.ts(15,1): error TS2348: Value of type 'ListFormatConstructor' is not callable. Did you mean to include 'new'?


==== es2021IntlAPIs.ts (5 errors) ====
    const locale = new Intl.Locale('en');
    const mixed = [ 'en', locale ] as const;
    
    Intl.DisplayNames(); // expect error
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2348: Value of type 'DisplayNamesConstructor' is not callable. Did you mean to include 'new'?
    new Intl.DisplayNames(); // expect error
    ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 2 arguments, but got 0.
!!! related TS6210 lib.es2021.intl.d.ts:--:--: An argument for 'locales' was not provided.
    new Intl.DisplayNames('en'); // expect error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 2 arguments, but got 1.
!!! related TS6210 lib.es2021.intl.d.ts:--:--: An argument for 'options' was not provided.
    new Intl.DisplayNames('en', {}); // expect error
                                ~~
!!! error TS2345: Argument of type '{}' is not assignable to parameter of type 'DisplayNamesOptions'.
!!! error TS2345:   Property 'type' is missing in type '{}' but required in type 'DisplayNamesOptions'.
!!! related TS2728 lib.es2021.intl.d.ts:--:--: 'type' is declared here.
    new Intl.DisplayNames('en', { type: 'region' });
    new Intl.DisplayNames(locale, { type: 'region' });
    new Intl.DisplayNames(mixed, { type: 'region' });
    const { style, type } = new Intl.DisplayNames('en', { style: 'long', type: 'language' }).resolvedOptions();
    new Intl.DisplayNames('en', { type: 'currency', fallback: 'none' }).of('EUR');
    Intl.DisplayNames.supportedLocalesOf(locale, { localeMatcher: 'best fit' });
    
    Intl.ListFormat(); // expect error
    ~~~~~~~~~~~~~~~~~
!!! error TS2348: Value of type 'ListFormatConstructor' is not callable. Did you mean to include 'new'?
    new Intl.ListFormat();
    new Intl.ListFormat('en');
    new Intl.ListFormat(locale);
    new Intl.ListFormat(mixed);
    const { style: style2, type: type2 } = new Intl.ListFormat('en', { style: 'short', type: 'disjunction' }).resolvedOptions();
    new Intl.ListFormat('en').format([ 'foo', 'bar' ]);
    new Intl.ListFormat('en').formatToParts(new Set<string>().values())[0];
    Intl.DisplayNames.supportedLocalesOf(locale, { localeMatcher: 'lookup' });
    
    const { dateStyle, timeStyle, dayPeriod, fractionalSecondDigits } = new Intl.DateTimeFormat('en', { dateStyle: 'full', timeStyle: 'long', dayPeriod: 'narrow', fractionalSecondDigits: 3 }).resolvedOptions();
    new Intl.DateTimeFormat().formatToParts(10)[0].type = 'fractionalSecond';
    new Intl.DateTimeFormat().formatRange(new Date(0), new Date());
    new Intl.DateTimeFormat().formatRangeToParts(1000, 1000000000)[0].source;
    
    new Intl.Collator('en', { collation: 'emoji' });
    